refactor sentiment timestamp extraction code to reuse

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -13786,6 +13786,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading Pkl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle5 as pickle\n",
+    "\n",
+    "pkl_fpath = './data/data_new_features_twitter.pkl'\n",
+    "\n",
+    "with open(pkl_fpath, 'rb') as f:\n",
+    "    clean_data = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(clean_data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
