--- a/twophase.ipynb
+++ b/twophase.ipynb
@@ -1985,7 +1985,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import xgboost as xgb\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
